style: update Zotero Better Bibcit style

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -4,13 +4,13 @@
   author = {Aaij, R. and Adeva, B. and Adinolfi, M. and Affolder, A. and Ajaltouni, Z. and Akar, S. and Albrecht, J. and Alessio, F. and Alexander, M. and Ali, S. and Alkhazov, G. and Alvarez Cartelle, P. and Alves, A. A. and Amato, S. and Amerio, S. and Amhis, Y. and An, L. and Anderlini, L. and Anderson, J. and Andreassi, G. and Andreotti, M. and Andrews, J. E. and Appleby, R. B. and Aquines Gutierrez, O. and Archilli, F. and {d’Argent}, P. and Artamonov, A. and Artuso, M. and Aslanides, E. and Auriemma, G. and Baalouch, M. and Bachmann, S. and Back, J. J. and Badalov, A. and Baesso, C. and Baldini, W. and Barlow, R. J. and Barschel, C. and Barsuk, S. and Barter, W. and Batozskaya, V. and Battista, V. and Bay, A. and Beaucourt, L. and Beddow, J. and Bedeschi, F. and Bediaga, I. and Bel, L. J. and Bellee, V. and Belloli, N. and Belyaev, I. and {Ben-Haim}, E. and Bencivenni, G. and Benson, S. and Benton, J. and Berezhnoy, A. and Bernet, R. and Bertolin, A. and Bettler, M.-O. and {van Beuzekom}, M. and Bien, A. and Bifani, S. and Billoir, P. and Bird, T. and Birnkraut, A. and Bizzeti, A. and Blake, T. and Blanc, F. and Blouw, J. and Blusk, S. and Bocci, V. and Bondar, A. and Bondar, N. and Bonivento, W. and Borghi, S. and Borsato, M. and Bowcock, T. J. V. and Bowen, E. and Bozzi, C. and Braun, S. and Britsch, M. and Britton, T. and Brodzicka, J. and Brook, N. H. and Bursche, A. and Buytaert, J. and Cadeddu, S. and Calabrese, R. and Calvi, M. and Calvo Gomez, M. and Campana, P. and Campora Perez, D. and Capriotti, L. and Carbone, A. and Carboni, G. and Cardinale, R. and Cardini, A. and Carniti, P. and Carson, L. and Carvalho Akiba, K. and Casse, G. and Cassina, L. and Castillo Garcia, L. and Cattaneo, M. and Cauet, Ch. and Cavallero, G. and Cenci, R. and Charles, M. and Charpentier, Ph. and Chefdeville, M. and Chen, S. and Cheung, S.-F. and Chiapolini, N. and Chrzaszcz, M. and Cid Vidal, X. and Ciezarek, G. and Clarke, P. E. L. and Clemencic, M. and Cliff, H. V. and Closier, J. and Coco, V. and Cogan, J. and Cogneras, E. and Cogoni, V. and Cojocariu, L. and Collazuol, G. and Collins, P. and {Comerma-Montells}, A. and Contu, A. and Cook, A. and Coombes, M. and Coquereau, S. and Corti, G. and Corvo, M. and Couturier, B. and Cowan, G. A. and Craik, D. C. and Crocombe, A. and Cruz Torres, M. and Cunliffe, S. and Currie, R. and D’Ambrosio, C. and Dall’Occo, E. and Dalseno, J. and David, P. N. Y. and Davis, A. and De Bruyn, K. and De Capua, S. and De Cian, M. and De Miranda, J. M. and De Paula, L. and De Simone, P. and Dean, C.-T. and Decamp, D. and Deckenhoff, M. and Del Buono, L. and Déléage, N. and Demmer, M. and Derkach, D. and Deschamps, O. and Dettori, F. and Dey, B. and Di Canto, A. and Di Ruscio, F. and Dijkstra, H. and Donleavy, S. and Dordei, F. and Dorigo, M. and Dosil Suárez, A. and Dossett, D. and Dovbnya, A. and Dreimanis, K. and Dufour, L. and Dujany, G. and Dupertuis, F. and Durante, P. and Dzhelyadin, R. and Dziurda, A. and Dzyuba, A. and Easo, S. and Egede, U. and Egorychev, V. and Eidelman, S. and Eisenhardt, S. and Eitschberger, U. and Ekelhof, R. and Eklund, L. and El Rifai, I. and Elsasser, Ch. and Ely, S. and Esen, S. and Evans, H. M. and Evans, T. and Falabella, A. and Färber, C. and Farley, N. and Farry, S. and Fay, R. and Ferguson, D. and Fernandez Albor, V. and Ferrari, F. and Ferreira Rodrigues, F. and {Ferro-Luzzi}, M. and Filippov, S. and Fiore, M. and Fiorini, M. and Firlej, M. and Fitzpatrick, C. and Fiutowski, T. and Fohl, K. and Fol, P. and Fontana, M. and Fontanelli, F. and Forty, R. and Francisco, O. and Frank, M. and Frei, C. and Frosini, M. and Fu, J. and Furfaro, E. and Gallas Torreira, A. and Galli, D. and Gallorini, S. and Gambetta, S. and Gandelman, M. and Gandini, P. and Gao, Y. and García Pardiñas, J. and Garra Tico, J. and Garrido, L. and Gascon, D. and Gaspar, C. and Gauld, R. and Gavardi, L. and Gazzoni, G. and Geraci, A. and Gerick, D. and Gersabeck, E. and Gersabeck, M. and Gershon, T. and Ghez, Ph. and Gianelle, A. and Gianì, S. and Gibson, V. and Girard, O. G. and Giubega, L. and Gligorov, V. V. and Göbel, C. and Golubkov, D. and Golutvin, A. and Gomes, A. and Gotti, C. and Grabalosa Gándara, M. and Graciani Diaz, R. and Granado Cardoso, L. A. and Graugés, E. and Graverini, E. and Graziani, G. and Grecu, A. and Greening, E. and Gregson, S. and Griffith, P. and Grillo, L. and Grünberg, O. and Gui, B. and Gushchin, E. and Guz, Yu. and Gys, T. and Hadavizadeh, T. and Hadjivasiliou, C. and Haefeli, G. and Haen, C. and Haines, S. C. and Hall, S. and Hamilton, B. and Han, X. and {Hansmann-Menzemer}, S. and Harnew, N. and Harnew, S. T. and Harrison, J. and He, J. and Head, T. and Heijne, V. and Hennessy, K. and Henrard, P. and Henry, L. and Hernando Morata, J. A. and {van Herwijnen}, E. and Heß, M. and Hicheur, A. and Hill, D. and Hoballah, M. and Hombach, C. and Hulsbergen, W. and Humair, T. and Hussain, N. and Hutchcroft, D. and Hynds, D. and Idzik, M. and Ilten, P. and Jacobsson, R. and Jaeger, A. and Jalocha, J. and Jans, E. and Jawahery, A. and Jing, F. and John, M. and Johnson, D. and Jones, C. R. and Joram, C. and Jost, B. and Jurik, N. and Kandybei, S. and Kanso, W. and Karacson, M. and Karbach, T. M. and Karodia, S. and Kecke, M. and Kelsey, M. and Kenyon, I. R. and Kenzie, M. and Ketel, T. and Khanji, B. and Khurewathanakul, C. and Klaver, S. and Klimaszewski, K. and Kochebina, O. and Kolpin, M. and Komarov, I. and Koopman, R. F. and Koppenburg, P. and Kozeiha, M. and Kravchuk, L. and Kreplin, K. and Kreps, M. and Krocker, G. and Krokovny, P. and Kruse, F. and Krzemien, W. and Kucewicz, W. and Kucharczyk, M. and Kudryavtsev, V. and Kuonen, A. K. and Kurek, K. and Kvaratskheliya, T. and Lacarrere, D. and Lafferty, G. and Lai, A. and Lambert, D. and Lanfranchi, G. and Langenbruch, C. and Langhans, B. and Latham, T. and Lazzeroni, C. and Le Gac, R. and {van Leerdam}, J. and Lees, J.-P. and Lefèvre, R. and Leflat, A. and Lefrançois, J. and Leroy, O. and Lesiak, T. and Leverington, B. and Li, Y. and Likhomanenko, T. and Liles, M. and Lindner, R. and Linn, C. and Lionetto, F. and Liu, B. and Liu, X. and Loh, D. and Longstaff, I. and Lopes, J. H. and Lucchesi, D. and Lucio Martinez, M. and Luo, H. and Lupato, A. and Luppi, E. and Lupton, O. and Lusardi, N. and Lusiani, A. and Machefert, F. and Maciuc, F. and Maev, O. and Maguire, K. and Malde, S. and Malinin, A. and Manca, G. and Mancinelli, G. and Manning, P. and Mapelli, A. and Maratas, J. and Marchand, J. F. and Marconi, U. and Marin Benito, C. and Marino, P. and Marks, J. and Martellotti, G. and Martin, M. and Martinelli, M. and Martinez Santos, D. and Martinez Vidal, F. and Martins Tostes, D. and Massafferri, A. and Matev, R. and Mathad, A. and Mathe, Z. and Matteuzzi, C. and Mauri, A. and Maurin, B. and Mazurov, A. and McCann, M. and McCarthy, J. and McNab, A. and McNulty, R. and Meadows, B. and Meier, F. and Meissner, M. and Melnychuk, D. and Merk, M. and Milanes, D. A. and Minard, M.-N. and Mitzel, D. S. and Molina Rodriguez, J. and Monroy, I. A. and Monteil, S. and Morandin, M. and Morawski, P. and Mordà, A. and Morello, M. J. and Moron, J. and Morris, A. B. and Mountain, R. and Muheim, F. and Müller, J. and Müller, K. and Müller, V. and Mussini, M. and Muster, B. and Naik, P. and Nakada, T. and Nandakumar, R. and Nandi, A. and Nasteva, I. and Needham, M. and Neri, N. and Neubert, S. and Neufeld, N. and Neuner, M. and Nguyen, A. D. and Nguyen, T. D. and {Nguyen-Mau}, C. and Niess, V. and Niet, R. and Nikitin, N. and Nikodem, T. and Ninci, D. and Novoselov, A. and O’Hanlon, D. P. and {Oblakowska-Mucha}, A. and Obraztsov, V. and Ogilvy, S. and Okhrimenko, O. and Oldeman, R. and Onderwater, C. J. G. and Osorio Rodrigues, B. and Otalora Goicochea, J. M. and Otto, A. and Owen, P. and Oyanguren, A. and Palano, A. and Palombo, F. and Palutan, M. and Panman, J. and Papanestis, A. and Pappagallo, M. and Pappalardo, L. L. and Pappenheimer, C. and Parkes, C. and Passaleva, G. and Patel, G. D. and Patel, M. and Patrignani, C. and Pearce, A. and Pellegrino, A. and Penso, G. and Pepe Altarelli, M. and Perazzini, S. and Perret, P. and Pescatore, L. and Petridis, K. and Petrolini, A. and Petruzzo, M. and Picatoste Olloqui, E. and Pietrzyk, B. and Pilař, T. and Pinci, D. and Pistone, A. and Piucci, A. and Playfer, S. and Plo Casasus, M. and Poikela, T. and Polci, F. and Poluektov, A. and Polyakov, I. and Polycarpo, E. and Popov, A. and Popov, D. and Popovici, B. and Potterat, C. and Price, E. and Price, J. D. and Prisciandaro, J. and Pritchard, A. and Prouve, C. and Pugatch, V. and Puig Navarro, A. and Punzi, G. and Qian, W. and Quagliani, R. and Rachwal, B. and Rademacker, J. H. and Rama, M. and Rangel, M. S. and Raniuk, I. and Rauschmayr, N. and Raven, G. and Redi, F. and Reichert, S. and Reid, M. M. and {dos Reis}, A. C. and Ricciardi, S. and Richards, S. and Rihl, M. and Rinnert, K. and Rives Molina, V. and Robbe, P. and Rodrigues, A. B. and Rodrigues, E. and Rodriguez Lopez, J. A. and Rodriguez Perez, P. and Roiser, S. and Romanovsky, V. and Romero Vidal, A. and Ronayne, J. W. and Rotondo, M. and Rouvinet, J. and Ruf, T. and Ruiz Valls, P. and Saborido Silva, J. J. and Sagidova, N. and Sail, P. and Saitta, B. and Salustino Guimaraes, V. and Sanchez Mayordomo, C. and Sanmartin Sedes, B. and Santacesaria, R. and Santamarina Rios, C. and Santimaria, M. and Santovetti, E. and Sarti, A. and Satriano, C. and Satta, A. and Saunders, D. M. and Savrina, D. and Schiller, M. and Schindler, H. and Schlupp, M. and Schmelling, M. and Schmelzer, T. and Schmidt, B. and Schneider, O. and Schopper, A. and Schubiger, M. and Schune, M.-H. and Schwemmer, R. and Sciascia, B. and Sciubba, A. and Semennikov, A. and Serra, N. and Serrano, J. and Sestini, L. and Seyfert, P. and Shapkin, M. and Shapoval, I. and Shcheglov, Y. and Shears, T. and Shekhtman, L. and Shevchenko, V. and Shires, A. and Siddi, B. G. and Silva Coutinho, R. and Simi, G. and Sirendi, M. and Skidmore, N. and Skillicorn, I. and Skwarnicki, T. and Smith, E. and Smith, E. and Smith, I. T. and Smith, J. and Smith, M. and Snoek, H. and Sokoloff, M. D. and Soler, F. J. P. and Soomro, F. and Souza, D. and Souza De Paula, B. and Spaan, B. and Spradlin, P. and Sridharan, S. and Stagni, F. and Stahl, M. and Stahl, S. and Stefkova, S. and Steinkamp, O. and Stenyakin, O. and Stevenson, S. and Stoica, S. and Stone, S. and Storaci, B. and Stracka, S. and Straticiuc, M. and Straumann, U. and Sun, L. and Sutcliffe, W. and Swientek, K. and Swientek, S. and Syropoulos, V. and Szczekowski, M. and Szczypka, P. and Szumlak, T. and T’Jampens, S. and Tayduganov, A. and Tekampe, T. and Teklishyn, M. and Tellarini, G. and Teubert, F. and Thomas, C. and Thomas, E. and {van Tilburg}, J. and Tisserand, V. and Tobin, M. and Todd, J. and Tolk, S. and Tomassetti, L. and Tonelli, D. and {Topp-Joergensen}, S. and Torr, N. and Tournefier, E. and Tourneur, S. and Trabelsi, K. and Tran, M. T. and Tresch, M. and Trisovic, A. and Tsaregorodtsev, A. and Tsopelas, P. and Tuning, N. and Ukleja, A. and Ustyuzhanin, A. and Uwer, U. and Vacca, C. and Vagnoni, V. and Valenti, G. and Vallier, A. and Vazquez Gomez, R. and Vazquez Regueiro, P. and Vázquez Sierra, C. and Vecchi, S. and Velthuis, J. J. and Veltri, M. and Veneziano, G. and Vesterinen, M. and Viaud, B. and Vieira, D. and Vieites Diaz, M. and {Vilasis-Cardona}, X. and Vollhardt, A. and Volyanskyy, D. and Voong, D. and Vorobyev, A. and Vorobyev, V. and Voß, C. and {de Vries}, J. A. and Waldi, R. and Wallace, C. and Wallace, R. and Walsh, J. and Wandernoth, S. and Wang, J. and Ward, D. R. and Watson, N. K. and Websdale, D. and Weiden, A. and Whitehead, M. and Wilkinson, G. and Wilkinson, M. and Williams, M. and Williams, M. P. and Williams, M. and Williams, T. and Wilson, F. F. and Wimberley, J. and Wishahi, J. and Wislicki, W. and Witek, M. and Wormser, G. and Wotton, S. A. and Wright, S. and Wyllie, K. and Xie, Y. and Xu, Z. and Yang, Z. and Yu, J. and Yuan, X. and Yushchenko, O. and Zangoli, M. and Zavertyaev, M. and Zhang, L. and Zhang, Y. and Zhelezov, A. and Zhokhov, A. and Zhong, L. and Zucchelli, S. and {LHCb Collaboration}},
   year = {2015},
   month = aug,
+  journal = {Physical Review Letters},
   volume = {115},
+  number = {7},
   pages = {072001},
   issn = {0031-9007, 1079-7114},
   doi = {10.1103/PhysRevLett.115.072001},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.072001},
-  journal = {Physical Review Letters},
-  number = {7}
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.072001}
 }
 
 @article{aitchisonMatrixFormalismOverlapping1972,
@@ -18,13 +18,13 @@
   author = {Aitchison, I.J.R.},
   year = {1972},
   month = jul,
+  journal = {Nuclear Physics A},
   volume = {189},
+  number = {2},
   pages = {417--423},
   issn = {03759474},
   doi = {10.1016/0375-9474(72)90305-3},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/0375947472903053},
-  journal = {Nuclear Physics A},
-  number = {2}
+  url = {https://linkinghub.elsevier.com/retrieve/pii/0375947472903053}
 }
 
 @book{amslerQuarkStructureHadrons2018,
@@ -33,14 +33,14 @@
   author = {Amsler, Claude},
   year = {2018},
   month = oct,
+  series = {Lecture {{Notes}} in {{Physics}}},
   edition = {1st ed. 2018},
+  number = {949},
   publisher = {{Springer International Publishing : Imprint: Springer}},
   address = {{Cham}},
   doi = {10.1007/978-3-319-98527-5},
   isbn = {978-3-319-98527-5},
-  lccn = {Electronic Resource},
-  number = {949},
-  series = {Lecture {{Notes}} in {{Physics}}}
+  lccn = {Electronic Resource}
 }
 
 @article{anisovichMomentoperatorExpansionTwomeson2002,
@@ -48,13 +48,13 @@
   author = {Anisovich, A V and Anisovich, V V and Markov, V N and Matveev, M A and Sarantsev, A V},
   year = {2002},
   month = jan,
+  journal = {Journal of Physics G: Nuclear and Particle Physics},
   volume = {28},
+  number = {1},
   pages = {15--32},
   issn = {0954-3899, 1361-6471},
   doi = {10.1088/0954-3899/28/1/302},
-  url = {http://stacks.iop.org/0954-3899/28/i=1/a=302?key=crossref.2da315974788d3ab6f79427c3029f7fb},
-  journal = {Journal of Physics G: Nuclear and Particle Physics},
-  number = {1}
+  url = {http://stacks.iop.org/0954-3899/28/i=1/a=302?key=crossref.2da315974788d3ab6f79427c3029f7fb}
 }
 
 @incollection{asnerDalitzPlotAnalysis2006,
@@ -73,13 +73,13 @@
   author = {Badalyan, A.M. and Kok, L.P. and Polikarpov, M.I. and Simonov, Yu.A.},
   year = {1982},
   month = feb,
+  journal = {Physics Reports},
   volume = {82},
+  number = {2},
   pages = {31--177},
   issn = {03701573},
   doi = {10.1016/0370-1573(82)90014-X},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/037015738290014X},
-  journal = {Physics Reports},
-  number = {2}
+  url = {https://linkinghub.elsevier.com/retrieve/pii/037015738290014X}
 }
 
 @article{chenCoherentHelicityAmplitude2017,
@@ -87,17 +87,17 @@
   author = {Chen, Hong and Ping, Rong-Gang},
   year = {2017},
   month = apr,
+  journal = {Physical Review D},
   volume = {95},
+  number = {7},
   pages = {076010},
   issn = {2470-0010, 2470-0029},
   doi = {10.1103/PhysRevD.95.076010},
-  url = {http://link.aps.org/doi/10.1103/PhysRevD.95.076010},
-  journal = {Physical Review D},
-  number = {7}
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.95.076010}
 }
 
 @techreport{chungFormulasAngularMomentumBarrier2015,
-  title = {Formulas for {{Angular}}-{{Momentum Barrier Factors}} ({{Version II}})},
+  title = {Formulas for {{Angular-Momentum Barrier Factors}} ({{Version II}})},
   author = {Chung, Suh-Urk},
   year = {2015},
   month = mar,
@@ -110,13 +110,13 @@
   author = {Chung, Suh-Urk and Brose, J. and Hackmann, R. and Klempt, E. and Spanier, S. and Strassburger, C.},
   year = {1995},
   month = may,
+  journal = {Annalen der Physik},
   volume = {507},
+  number = {5},
   pages = {404--430},
   issn = {00033804, 15213889},
   doi = {10.1002/andp.19955070504},
-  url = {http://doi.wiley.com/10.1002/andp.19955070504},
-  journal = {Annalen der Physik},
-  number = {5}
+  url = {http://doi.wiley.com/10.1002/andp.19955070504}
 }
 
 @techreport{chungSpinFormalismsUpdated2014,
@@ -126,25 +126,7 @@
   month = jul,
   pages = {BNL--76975-2006-IR, 890945},
   institution = {{Brookhaven National Laboratory}},
-  url = {https://suchung.web.cern.ch/spinfm1.pdf},
-  collaborator = {Laboratory, Brookhaven National and of Scientific, United States Department of Energy Office and Information, Technical}
-}
-
-@article{jpaccollaborationDalitzplotDecompositionThreebody2020,
-  title = {Dalitz-Plot Decomposition for Three-Body Decays},
-  author = {{JPAC Collaboration} and Mikhasenko, M. and Albaladejo, M. and Bibrzycki, L. and {Fernandez-Ramirez}, C. and Mathieu, V. and Mitchell, S. and Pappagallo, M. and Pilloni, A. and Winney, D. and Skwarnicki, T. and Szczepaniak, A. P.},
-  year = {2020},
-  month = feb,
-  volume = {101},
-  pages = {034033},
-  issn = {2470-0010, 2470-0029},
-  doi = {10.1103/PhysRevD.101.034033},
-  url = {http://arxiv.org/abs/1910.04566},
-  archiveprefix = {arXiv},
-  eprint = {1910.04566},
-  eprinttype = {arxiv},
-  journal = {Physical Review D},
-  number = {3}
+  url = {https://suchung.web.cern.ch/spinfm1.pdf}
 }
 
 @article{ketzerLightMesonSpectroscopyCOMPASS2019,
@@ -152,12 +134,12 @@
   author = {Ketzer, Bernhard and Grube, Boris and Ryabchikov, Dmitry},
   year = {2019},
   month = dec,
-  issn = {01466410},
-  doi = {10.1016/j.ppnp.2020.103755},
-  archiveprefix = {arXiv},
+  journal = {Progress in Particle and Nuclear Physics},
   eprint = {1909.06366},
   eprinttype = {arxiv},
-  journal = {Progress in Particle and Nuclear Physics}
+  issn = {01466410},
+  doi = {10.1016/j.ppnp.2020.103755},
+  archiveprefix = {arXiv}
 }
 
 @misc{kutschkeAngularDistributionCookbook1996,
@@ -172,12 +154,12 @@
   title = {Spin in Particle Physics},
   author = {Leader, Elliot},
   year = {2001},
+  series = {Cambridge Monographs on Particle Physics, Nuclear Physics, and Cosmology},
+  number = {15},
   publisher = {{Cambridge University Press}},
   address = {{Cambridge ; New York}},
   isbn = {978-0-521-35281-9},
-  lccn = {QC793.3.S6 L43 2001},
-  number = {15},
-  series = {Cambridge Monographs on Particle Physics, Nuclear Physics, and Cosmology}
+  lccn = {QC793.3.S6 L43 2001}
 }
 
 @article{marangottoHelicityAmplitudesGeneric2020,
@@ -185,11 +167,11 @@
   author = {Marangotto, Daniele},
   year = {2020},
   month = nov,
-  url = {http://arxiv.org/abs/1911.10025},
-  archiveprefix = {arXiv},
+  journal = {arXiv},
   eprint = {1911.10025},
   eprinttype = {arxiv},
-  journal = {arXiv}
+  url = {http://arxiv.org/abs/1911.10025},
+  archiveprefix = {arXiv}
 }
 
 @book{martinElementaryParticleTheory1970,
@@ -202,6 +184,23 @@
   lccn = {QC721 .M298}
 }
 
+@article{mikhasenkoDalitzplotDecompositionThreebody2020,
+  title = {Dalitz-Plot Decomposition for Three-Body Decays},
+  author = {Mikhasenko, M. and Albaladejo, M. and Bibrzycki, Ł. and {Fernandez-Ramirez}, C. and Mathieu, V. and Mitchell, S. and Pappagallo, M. and Pilloni, A. and Winney, D. and Skwarnicki, T. and Szczepaniak, A. P.},
+  year = {2020},
+  month = feb,
+  journal = {Physical Review D},
+  volume = {101},
+  number = {3},
+  eprint = {1910.04566},
+  eprinttype = {arxiv},
+  pages = {034033},
+  issn = {2470-0010, 2470-0029},
+  doi = {10.1103/PhysRevD.101.034033},
+  url = {https://journals.aps.org/prd/abstract/10.1103/PhysRevD.101.034033},
+  archiveprefix = {arXiv}
+}
+
 @book{newtonScatteringTheoryWaves1982,
   title = {Scattering {{Theory}} of {{Waves}} and {{Particles}}},
   author = {Newton, Roger G.},
@@ -209,8 +208,8 @@
   edition = {2nd edition},
   publisher = {{Springer}},
   address = {{New York}},
-  annotation = {OCLC: 721001374},
-  isbn = {978-3-540-10950-1}
+  isbn = {978-3-540-10950-1},
+  annotation = {OCLC: 721001374}
 }
 
 @article{particledatagroupReviewParticlePhysics2020,
@@ -218,13 +217,13 @@
   author = {{Particle Data Group} and Zyla, P A and Barnett, R M and Beringer, J and Dahl, O and Dwyer, D A and Groom, D E and Lin, C -J and Lugovsky, K S and Pianori, E and Robinson, D J and Wohl, C G and Yao, W -M and Agashe, K and Aielli, G and Allanach, B C and Amsler, C and Antonelli, M and Aschenauer, E C and Asner, D M and Baer, H and Banerjee, Sw and Baudis, L and Bauer, C W and Beatty, J J and Belousov, V I and Bethke, S and Bettini, A and Biebel, O and Black, K M and Blucher, E and Buchmuller, O and Burkert, V and Bychkov, M A and Cahn, R N and Carena, M and Ceccucci, A and Cerri, A and Chakraborty, D and Chivukula, R Sekhar and Cowan, G and D'Ambrosio, G and Damour, T and {de Florian}, D and {de Gouvêa}, A and DeGrand, T and {de Jong}, P and Dissertori, G and Dobrescu, B A and D'Onofrio, M and Doser, M and Drees, M and Dreiner, H K and Eerola, P and Egede, U and Eidelman, S and Ellis, J and Erler, J and Ezhela, V V and Fetscher, W and Fields, B D and Foster, B and Freitas, A and Gallagher, H and Garren, L and Gerber, H -J and Gerbier, G and Gershon, T and Gershtein, Y and Gherghetta, T and Godizov, A A and {Gonzalez-Garcia}, M C and Goodman, M and Grab, C and Gritsan, A V and Grojean, C and Grünewald, M and Gurtu, A and Gutsche, T and Haber, H E and Hanhart, C and Hashimoto, S and Hayato, Y and Hebecker, A and Heinemeyer, S and Heltsley, B and {Hernández-Rey}, J J and Hikasa, K and Hisano, J and Höcker, A and Holder, J and Holtkamp, A and Huston, J and Hyodo, T and Johnson, K F and Kado, M and Karliner, M and Katz, U F and Kenzie, M and Khoze, V A and Klein, S R and Klempt, E and Kowalewski, R V and Krauss, F and Kreps, M and Krusche, B and Kwon, Y and Lahav, O and Laiho, J and Lellouch, L P and Lesgourgues, J and Liddle, A R and Ligeti, Z and Lippmann, C and Liss, T M and Littenberg, L and Lourengo, C and Lugovsky, S B and Lusiani, A and Makida, Y and Maltoni, F and Mannel, T and Manohar, A V and Marciano, W J and Masoni, A and Matthews, J and Meißner, U -G and Mikhasenko, M and Miller, D J and Milstead, D and Mitchell, R E and Mönig, K and Molaro, P and Moortgat, F and Moskovic, M and Nakamura, K and Narain, M and Nason, P and Navas, S and Neubert, M and Nevski, P and Nir, Y and Olive, K A and Patrignani, C and Peacock, J A and Petcov, S T and Petrov, V A and Pich, A and Piepke, A and Pomarol, A and Profumo, S and Quadt, A and Rabbertz, K and Rademacker, J and Raffelt, G and Ramani, H and {Ramsey-Musolf}, M and Ratcliff, B N and Richardson, P and Ringwald, A and Roesler, S and Rolli, S and Romaniouk, A and Rosenberg, L J and Rosner, J L and Rybka, G and Ryskin, M and Ryutin, R A and Sakai, Y and Salam, G P and Sarkar, S and Sauli, F and Schneider, O and Scholberg, K and Schwartz, A J and Schwiening, J and Scott, D and Sharma, V and Sharpe, S R and Shutt, T and Silari, M and Sjöstrand, T and Skands, P and Skwarnicki, T and Smoot, G F and Soffer, A and Sozzi, M S and Spanier, S and Spiering, C and Stahl, A and Stone, S L and Sumino, Y and Sumiyoshi, T and Syphers, M J and Takahashi, F and Tanabashi, M and Tanaka, J and Taševský, M and Terashi, K and Terning, J and Thoma, U and Thorne, R S and Tiator, L and Titov, M and Tkachenko, N P and Tovey, D R and Trabelsi, K and Urquijo, P and Valencia, G and {Van de Water}, R and Varelas, N and Venanzoni, G and Verde, L and Vincter, M G and Vogel, P and Vogelsang, W and Vogt, A and Vorobyev, V and Wakely, S P and Walkowiak, W and Walter, C W and Wands, D and Wascko, M O and Weinberg, D H and Weinberg, E J and White, M and Wiencke, L R and Willocq, S and Woody, C L and Workman, R L and Yokoyama, M and Yoshida, R and Zanderighi, G and Zeller, G P and Zenin, O V and Zhu, R -Y and Zhu, S -L and Zimmermann, F and Anderson, J and Basaglia, T and Lugovsky, V S and Schaffner, P and Zheng, W},
   year = {2020},
   month = aug,
+  journal = {Progress of Theoretical and Experimental Physics},
   volume = {2020},
+  number = {8},
   pages = {083C01},
   issn = {2050-3911},
   doi = {10.1093/ptep/ptaa104},
-  url = {https://academic.oup.com/ptep/article/doi/10.1093/ptep/ptaa104/5891211},
-  journal = {Progress of Theoretical and Experimental Physics},
-  number = {8}
+  url = {https://academic.oup.com/ptep/article/doi/10.1093/ptep/ptaa104/5891211}
 }
 
 @article{petersPrimerPartialWave2004,
@@ -232,10 +231,10 @@
   author = {Peters, Klaus},
   year = {2004},
   month = dec,
-  archiveprefix = {arXiv},
+  journal = {arXiv},
   eprint = {hep-ph/0412069},
   eprinttype = {arxiv},
-  journal = {arXiv}
+  archiveprefix = {arXiv}
 }
 
 @misc{richmanExperimenterGuideHelicity1984,
@@ -251,11 +250,11 @@
   author = {Wang, Mengzhen and Jiang, Yi and Liu, Yinrui and Qian, Wenbin and Lyu, Xiaorui and Zhang, Liming},
   year = {2020},
   month = dec,
-  url = {http://arxiv.org/abs/2012.03699},
-  archiveprefix = {arXiv},
+  journal = {arXiv},
   eprint = {2012.03699},
   eprinttype = {arxiv},
-  journal = {arXiv}
+  url = {http://arxiv.org/abs/2012.03699},
+  archiveprefix = {arXiv}
 }
 
 @book{weinbergQuantumTheoryFields1995,
@@ -269,17 +268,17 @@
 }
 
 @article{zemachUseAngularMomentumTensors1965,
-  title = {Use of {{Angular}}-{{Momentum Tensors}}},
+  title = {Use of {{Angular-Momentum Tensors}}},
   author = {Zemach, Charles},
   year = {1965},
   month = oct,
+  journal = {Physical Review},
   volume = {140},
+  number = {1B},
   pages = {B97-B108},
   issn = {0031-899X},
   doi = {10.1103/PhysRev.140.B97},
-  url = {https://link.aps.org/doi/10.1103/PhysRev.140.B97},
-  journal = {Physical Review},
-  number = {1B}
+  url = {https://link.aps.org/doi/10.1103/PhysRev.140.B97}
 }
 
 
