docs: update link to Marangotto 2020

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -163,15 +163,17 @@
 }
 
 @article{marangottoHelicityAmplitudesGeneric2020,
-  title = {Helicity Amplitudes for Generic Multi-Body Particle Decays Featuring Multiple Decay Chains},
+  title = {Helicity {{Amplitudes}} for {{Generic Multibody Particle Decays Featuring Multiple Decay Chains}}},
   author = {Marangotto, Daniele},
+  editor = {Vagnozzi, Sunny},
   year = {2020},
-  month = nov,
-  journal = {arXiv},
-  eprint = {1911.10025},
-  eprinttype = {arxiv},
-  url = {http://arxiv.org/abs/1911.10025},
-  archiveprefix = {arXiv}
+  month = dec,
+  journal = {Advances in High Energy Physics},
+  volume = {2020},
+  pages = {1--15},
+  issn = {1687-7365, 1687-7357},
+  doi = {10.1155/2020/6674595},
+  url = {https://www.hindawi.com/journals/ahep/2020/6674595/}
 }
 
 @book{martinElementaryParticleTheory1970,
