DOC: make Colab TOC visible by default

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -245,6 +245,9 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "toc_visible": true
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
