DOC: add Byckling & Kajantie to bibliography

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -81,6 +81,16 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/037015738290014X}
 }
 
+@book{bycklingParticleKinematics1973,
+  title = {Particle {{Kinematics}}},
+  author = {Byckling, Eero and Kajantie, Keijo},
+  year = {1973},
+  publisher = {{Wiley}},
+  address = {{London, New York}},
+  isbn = {978-0-471-12885-4},
+  lccn = {QC794.6.K5 B95}
+}
+
 @article{chenCoherentHelicityAmplitude2017,
   title = {Coherent Helicity Amplitude for Sequential Decays},
   author = {Chen, Hong and Ping, Rong-Gang},
