DOC: switch to Inspire-HEP bibtex keys

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -238,7 +238,7 @@
   url = {https://academic.oup.com/ptep/article/doi/10.1093/ptep/ptaa104/5891211}
 }
 
-@article{petersPrimerPartialWave2004,
+@article{Peters:2004qw,
   title = {A {{Primer}} on {{Partial Wave Analysis}}},
   author = {Peters, Klaus},
   year = {2004},
@@ -256,7 +256,7 @@
   url = {https://inspirehep.net/literature/202987}
 }
 
-@article{wangNovelMethodTest2020,
+@article{Wang:2020giv,
   title = {A Novel Method to Test Particle Ordering and Final State Alignment in Helicity Formalism},
   author = {Wang, Mengzhen and Jiang, Yi and Liu, Yinrui and Qian, Wenbin and Lyu, Xiaorui and Zhang, Liming},
   year = {2020},
