--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -170,7 +170,7 @@
     ":::{todo}\n",
     ":class: dropdown\n",
     "\n",
-    "Decomposition into partial waves {cite}`petersPrimerPartialWave2004`, p.3:\n",
+    "Decomposition into partial waves {cite}`Peters:2004qw`, p.3:\n",
     "\n",
     "> Consider an incident wave $\\left|i\\right> = Psi_i$. In an experimental\n",
     "> setting, we can assume a vanishing potential at $t\\rightarrow\\infty$, which\n",
