DOC: update links to compwa.github.io

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -165,7 +165,7 @@
    "source": [
     ":::{tip}\n",
     "\n",
-    "Have a look at [scikit-hep.org/developer](https://scikit-hep.org/developer) and [Towards a HEP Software Training curriculum](https://hepsoftwarefoundation.org/training/curriculum.html)! For development instructions for the ComPWA organization, see [Help developing](https://compwa-org.readthedocs.io/develop.html).\n",
+    "Have a look at [scikit-hep.org/developer](https://scikit-hep.org/developer) and [Towards a HEP Software Training curriculum](https://hepsoftwarefoundation.org/training/curriculum.html)! For development instructions for the ComPWA organization, see [Help developing](https://compwa.github.io/develop).\n",
     "\n",
     ":::"
    ]
