MAINT: apply new zotero-better-bibtex style
See https://github.com/retorquere/zotero-better-bibtex

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -35,8 +35,8 @@
   series = {Lecture {{Notes}} in {{Physics}}},
   edition = {1st ed. 2018},
   number = {949},
-  publisher = {{Springer International Publishing : Imprint: Springer}},
-  address = {{Cham}},
+  publisher = {Springer International Publishing : Imprint: Springer},
+  address = {Cham},
   doi = {10.1007/978-3-319-98527-5},
   isbn = {978-3-319-98527-5},
   lccn = {Electronic Resource}
@@ -85,8 +85,8 @@
   title = {Particle {{Kinematics}}},
   author = {Byckling, Eero and Kajantie, Keijo},
   year = {1973},
-  publisher = {{Wiley}},
-  address = {{London, New York}},
+  publisher = {Wiley},
+  address = {London, New York},
   isbn = {978-0-471-12885-4},
   lccn = {QC794.6.K5 B95}
 }
@@ -110,7 +110,7 @@
   author = {Chung, Suh-Urk},
   year = {2015},
   month = mar,
-  institution = {{Brookhaven National Laboratory}},
+  institution = {Brookhaven National Laboratory},
   url = {https://physique.cuso.ch/fileadmin/physique/document/2015_chung_brfactor1.pdf}
 }
 
@@ -134,7 +134,7 @@
   year = {2014},
   month = jul,
   pages = {BNL--76975-2006-IR, 890945},
-  institution = {{Brookhaven National Laboratory}},
+  institution = {Brookhaven National Laboratory},
   url = {https://suchung.web.cern.ch/spinfm1.pdf}
 }
 
@@ -180,8 +180,8 @@
   year = {2001},
   series = {Cambridge Monographs on Particle Physics, Nuclear Physics, and Cosmology},
   number = {15},
-  publisher = {{Cambridge University Press}},
-  address = {{Cambridge ; New York}},
+  publisher = {Cambridge University Press},
+  address = {Cambridge ; New York},
   isbn = {978-0-521-35281-9},
   lccn = {QC793.3.S6 L43 2001}
 }
@@ -207,8 +207,8 @@
   title = {Elementary {{Particle Theory}}},
   author = {Martin, Alan D. and Spearman, T. D.},
   year = {1970},
-  publisher = {{North-Holland Pub. Co}},
-  address = {{Amsterdam}},
+  publisher = {North-Holland Pub. Co},
+  address = {Amsterdam},
   isbn = {978-0-7204-0157-8},
   lccn = {QC721 .M298}
 }
@@ -218,8 +218,8 @@
   author = {Newton, Roger G.},
   year = {1982},
   edition = {2nd edition},
-  publisher = {{Springer}},
-  address = {{New York}},
+  publisher = {Springer},
+  address = {New York},
   isbn = {978-3-540-10950-1},
   annotation = {OCLC: 721001374}
 }
@@ -271,8 +271,8 @@
   title = {The {{Quantum Theory}} of {{Fields}}, {{Volume}} 1: {{Foundations}}},
   author = {Weinberg, Steven},
   year = {1995},
-  publisher = {{Cambridge University Press}},
-  address = {{Cambridge ; New York}},
+  publisher = {Cambridge University Press},
+  address = {Cambridge ; New York},
   isbn = {978-0-521-55001-7},
   lccn = {QC174.45 .W45 1995}
 }
