DOC: add Li:2022qff to spin alignment literature
https://doi.org/10.1016/j.nuclphysa.2023.122761

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -186,6 +186,19 @@
   lccn = {QC793.3.S6 L43 2001}
 }
 
+@article{Li:2022qff,
+  title = {Spin-Orbit Amplitudes for Decays with Arbitrary Spin},
+  author = {Li, Xiao-Yu and Dong, Xiang-Kun and Jing, Hao-Jie},
+  year = {2023},
+  month = dec,
+  journal = {Nuclear Physics A},
+  volume = {1040},
+  pages = {122761},
+  issn = {03759474},
+  doi = {10.1016/j.nuclphysa.2023.122761},
+  url = {https://doi.org/10.1016/j.nuclphysa.2023.122761}
+}
+
 @article{Marangotto:2019ucc,
   title = {Helicity {{Amplitudes}} for {{Generic Multibody Particle Decays Featuring Multiple Decay Chains}}},
   author = {Marangotto, Daniele},
