DOC: add Julia as language column

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -98,6 +98,7 @@
     "    selected_languages=[\n",
     "        \"C++\",\n",
     "        \"Python\",\n",
+    "        \"Julia\",\n",
     "        \"Cuda\",\n",
     "    ],\n",
     "    fetch=True,\n",
@@ -125,6 +126,7 @@
      "source_hidden": true
     },
     "tags": [
+     "full-width",
      "remove-input"
     ]
    },
