DOC: cite Jacob & Wick

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -113,6 +113,20 @@
   url = {https://suchung.web.cern.ch/spinfm1.pdf}
 }
 
+@article{Jacob:1959at,
+  title = {On the General Theory of Collisions for Particles with Spin},
+  author = {Jacob, M. and Wick, G.C.},
+  year = {1959},
+  month = aug,
+  journal = {Annals of Physics},
+  volume = {7},
+  number = {4},
+  pages = {404--428},
+  issn = {00034916},
+  doi = {10.1016/0003-4916(59)90051-X},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/000349165990051X}
+}
+
 @article{JPAC:2019ufm,
   title = {Dalitz-Plot Decomposition for Three-Body Decays},
   author = {Mikhasenko, M. and Albaladejo, M. and Bibrzycki, Ł. and {Fernandez-Ramirez}, C. and Mathieu, V. and Mitchell, S. and Pappagallo, M. and Pilloni, A. and Winney, D. and Skwarnicki, T. and Szczepaniak, A. P.},
