DX!: build documentation with Quarto

--- a/docs/analysis/fit.qmd
+++ b/docs/analysis/fit.qmd
@@ -1,8 +1,10 @@
-# Fit techniques
+---
+title: Fit techniques
+---
 
-```{warning}
+:::{.callout-warning}
 These pages are **under development**.
-```
+:::
 
 ## Maximum likelihood
 
