--- a/docs/analysis/visualization.qmd
+++ b/docs/analysis/visualization.qmd
@@ -1,8 +1,10 @@
-# Visualization
+---
+title: Visualization
+---
 
-```{warning}
+:::{.callout-warning}
 These pages are **under development**.
-```
+:::
 
 ## Dalitz plot
 
