ENH: add aliases for redirecting

--- a/docs/physics/topics/index.qmd
+++ b/docs/physics/topics/index.qmd
@@ -1,4 +1,8 @@
-# Miscellaneous topics
+---
+title: Miscellaneous topics
+aliases:
+  - topics.html
+---
 
 :::{.callout-warning}
 These pages are **under development**.
